--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -53,7 +53,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "name = input(\"NAME: \")\n",
+    "age = int(input(\"AGE: \"))\n",
+    "address = input(\"ADDRESS: \")\n",
+    "salary = float(input(\"SALARY: \"))\n",
+    "expenses = float(input(\"EXPENSES: \"))\n",
+    "\n",
+    "remaining_salary = round((salary - expenses),1)\n",
+    "is_salary_good = remaining_salary >= 500\n",
+    "\n",
+    "print(f\"{name}, who is {age} years old, and lives in {address} has {remaining_salary} dollars left from her salary after expenses. It is {is_salary_good} that she has more than $500 left.\")\n"
    ]
   },
   {
@@ -106,7 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "string = \"python is awesome!\"\n",
+    "poem_no_dots = poem.replace(\".\", \" \") \n",
+    "poem_no_commas = poem_no_dots.replace(\",\", \" \")\n",
+    "final_string = poem_no_commas.lower()+string\n",
+    "print(len(final_string))\n",
+    "poem_list = final_string.split()\n",
+    "print(poem_list)"
    ]
   }
  ],
